# fastapi_pretice_1

./: main.py  pyproject.toml  test.sh
.github/workflows/: ci.yml
app/apis/v1/: meeting_router.py
app/dtos/: create_meeting_response.py  frozen_config.py
app/utils/: base62.py
