[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["gunung-kim"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "0.115.6"
uvicorn = "0.32.1"


[tool.poetry.group.dev.dependencies]
black = "24.10.0"
ruff = "0.8.2"
mypy = "1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py313"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = 3.14
strict = true